# jarvis

./: .env  .gitignore  .state.json  ADD.md  Cargo.toml  ENVIRONMENT_FIXES_SUMMARY.md  EVERY_CHECK.md  FIX.md  INSTRUCTION.md  QWEN.md  README.md  README_DOCS.md  TODO_LIST.md  jarvis.sh  jarvis_start_daemon.sh  post_build.sh  prd_calculator_fix.md  prd_environment_fix.md  prd_mode_manager.md  prd_python_api.md  prd_python_command_return_fix.md  prd_rebuild_gui_flag.md  pyproject.toml  rebuild.sh  tickets.md
.cargo/: config.toml
.pickle_sessions/: prd.md
.pickle_sessions/2026-02-22-2adc8d16/: linear_ticket_LINUX_PORT_EPIC.md
.pickle_sessions/2026-02-22-2adc8d16/BUILD_TEST_PORT/: linear_ticket_BUILD_TEST_PORT.md
.pickle_sessions/2026-02-22-2adc8d16/CARGO_DEPS_PORT/: linear_ticket_CARGO_DEPS_PORT.md
.pickle_sessions/2026-02-22-2adc8d16/COMMAND_CONFIG_PORT/: linear_ticket_COMMAND_CONFIG_PORT.md
.pickle_sessions/2026-02-22-2adc8d16/FILE_EXPLORER_PORT/: linear_ticket_FILE_EXPLORER_PORT.md
.qwen/tmp/: linear_ticket_parent_jarvis_api_logger.md  prd_jarvis_api_logger.md
.qwen/tmp/impl_jarvis_api_logger_dual/: plan_implementation.md  (+4 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md  typescript.md
crates/jarvis-app/: Cargo.toml  build.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: audio.rs  commands.rs  config.rs  lib.rs  listener.rs  modes.rs  stt.rs
crates/jarvis-core/src/commands/: structs.rs
crates/jarvis-core/src/db/: structs.rs
crates/jarvis-core/src/listener/: rustpotter.rs
crates/jarvis-core/src/lua/: api.rs  engine.rs
crates/jarvis-core/src/lua/api/: modes.rs  system.rs
crates/jarvis-core/src/models/loaders/: embedding.rs
crates/jarvis-core/src/stt/: vosk.rs
crates/jarvis-gui/: tauri.conf.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1771754789033-d95504dc50a288.mjs
resources/commands/: ADD.md  FIX.md  WAKE_WORD.md  WAKE_WORD_PROTOCOL.md  jarvis_server.py  main.py  mode_manager.py  template.sh  vpn.py  wayland.py  wm_manager.py
scripts/: morty_spawner.py  test_python_commands.py
tickets/: fix_cli_yaml_alias.md  plan_fix_cli_yaml_alias.md  plan_review_fix_cli_yaml_alias.md
tickets/mode_manager/: linear_ticket_epic.md
(+142 files in other folders)
